--- a/Views/ClientsView.xaml
+++ b/Views/ClientsView.xaml
@@ -7,34 +7,41 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" 
              d:DesignWidth="800"
-             Background="#7e67a1"
-             MinWidth="800"
-             MaxWidth="800"
-             MinHeight="450"
-             MaxHeight="450">
-        <Border
-            BorderThickness="3"
-            BorderBrush="#635c6e">
+             Background="Transparent">
+    <Border 
+        BorderBrush="SlateBlue" 
+        BorderThickness="3" 
+        Padding="5" 
+        CornerRadius="15">
+        <Border.Background>
+            <LinearGradientBrush>
+                <GradientStop Color="#69dbbd" Offset="0.0"></GradientStop>
+                <GradientStop Color="#a669db" Offset="1"></GradientStop>
+            </LinearGradientBrush>
+        </Border.Background>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="auto" />
-        </Grid.ColumnDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="35" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
             <TextBlock 
                 Grid.Row ="0" 
                 Grid.Column="0" 
                 Text="Clients" 
                 FontSize="24"
-                Background="#614987">
+                FontWeight="Light"
+                FontFamily="Helvetica"
+                Margin="5">
             </TextBlock>
-            <ListView 
-                Grid.Row="1" 
-                Grid.Column="1" 
-                Background="#ab9fbf" 
+            <ScrollViewer Grid.Row="1" Grid.Column="1" >
+                <ListView                 
+                Background="#b2e1ed"    
+                Opacity="0.87"
                 ItemsSource="{Binding ClientList}" 
                 SelectedItem="{Binding SelectedClient}">
                     <ListView.ItemContainerStyle>
@@ -42,69 +49,70 @@
                             <Setter Property="Height" Value="30" />
                         </Style>
                     </ListView.ItemContainerStyle>
-                <ListView.View>
-                    <GridView>
-                        <GridView.Columns>
-                            <GridViewColumn Header ="ID" DisplayMemberBinding="{Binding ID}" Width="44"></GridViewColumn>
-                            <GridViewColumn Header ="OIB" DisplayMemberBinding="{Binding OIB}" Width="60"></GridViewColumn>
-                            <GridViewColumn Header ="Ime" DisplayMemberBinding="{Binding Ime}" Width="60"></GridViewColumn>
-                            <GridViewColumn Header ="Prezime" DisplayMemberBinding="{Binding Prezime}" Width="55"></GridViewColumn>
-                            <GridViewColumn Header ="Mjesto" DisplayMemberBinding="{Binding Mjesto}" Width="100"></GridViewColumn>
-                            <GridViewColumn Header ="Adresa" DisplayMemberBinding="{Binding Adresa}" Width="150"></GridViewColumn>
-                            <GridViewColumn Header ="Mail" DisplayMemberBinding="{Binding Mail}" Width="100"></GridViewColumn>
-                            <GridViewColumn Header ="Telefon" DisplayMemberBinding="{Binding Telefon}" Width="100"></GridViewColumn>
-                        </GridView.Columns>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-            
+
+                    <ListView.View>
+                        <GridView>
+                            <GridView.Columns>
+                                <GridViewColumn Header ="ID" DisplayMemberBinding="{Binding ID}" Width="44"></GridViewColumn>
+                                <GridViewColumn Header ="OIB" DisplayMemberBinding="{Binding OIB}" Width="60"></GridViewColumn>
+                                <GridViewColumn Header ="Ime" DisplayMemberBinding="{Binding Ime}" Width="60"></GridViewColumn>
+                                <GridViewColumn Header ="Prezime" DisplayMemberBinding="{Binding Prezime}" Width="55"></GridViewColumn>
+                                <GridViewColumn Header ="Mjesto" DisplayMemberBinding="{Binding Mjesto}" Width="100"></GridViewColumn>
+                                <GridViewColumn Header ="Adresa" DisplayMemberBinding="{Binding Adresa}" Width="150"></GridViewColumn>
+                                <GridViewColumn Header ="Mail" DisplayMemberBinding="{Binding Mail}" Width="100"></GridViewColumn>
+                                <GridViewColumn Header ="Telefon" DisplayMemberBinding="{Binding Telefon}" Width="70"></GridViewColumn>
+                            </GridView.Columns>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </ScrollViewer>
+
+
             <StackPanel 
             Grid.Row="1" 
             Grid.Column="0" 
             Orientation="Vertical"
             Margin="10">
                 <Button 
-                Name="ButtonAdd" 
-                Margin="5" 
-                FontSize="18"
-                BorderBrush="#4e317d"
-                BorderThickness="2"
-                Background="#9f91b5"
-                Content="Add New" 
+                Name="ButtonAdd"              
+                Content="Add" 
                 Command="{Binding AddClientCmd}">
                 </Button>
                 <Button 
-                Name="ButtonDelete"
-                Margin="5" 
-                FontSize="18"
-                BorderBrush="#4e317d"
-                BorderThickness="2"
-                Background="#9f91b5"
+                Name="ButtonDelete"              
                 Content="Delete" 
                 Command="{Binding DelClientCmd}">
                 </Button>
                 <Button 
-                Name="ButtonUpdate"
-                Margin="5" 
-                FontSize="18"
-                BorderBrush="#4e317d"
-                BorderThickness="2"
-                Background="#9f91b5"
+                Name="ButtonUpdate"              
                 Content="Update"
                 Command="{Binding UpdateClientCmd}">
                 </Button>
                 <Button 
-                Name="ButtonImport"
-                Margin="5" 
-                FontSize="18"
-                BorderBrush="#4e317d"
-                BorderThickness="2"
-                Background="#9f91b5"
+                Name="ButtonImport"              
                 Content="Import"
                 Command="{Binding ImportClientsCmd}">
                 </Button>
             </StackPanel>
-            
+            <RepeatButton
+                Grid.Row="0"
+                Grid.Column="1"
+                Height="20" Width="20"
+                HorizontalAlignment="Right"
+                Name="Exit"              
+                Content="x"
+                FontWeight="Bold"
+                Command="{Binding ExitCmd}">
+            </RepeatButton>
+            <TextBlock 
+                Grid.Row ="3" 
+                Grid.Column="1" 
+                FontSize="24"
+                FontWeight="Light"
+                FontFamily="Helvetica"
+                Margin="5"
+                Text="{Binding Error}">
+            </TextBlock>
         </Grid>
     </Border>
 </UserControl>
