--- a/Views/UpdateClientView.xaml
+++ b/Views/UpdateClientView.xaml
@@ -6,137 +6,178 @@
              xmlns:local="clr-namespace:MbanqClients.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
-        <TextBlock
-            Grid.Row="0"
-            Text="Update client" />
-
-        <Grid Grid.Row="1" Margin="0 25 0 0">
+    <Border 
+        BorderBrush="SlateBlue" 
+        BorderThickness="3" 
+        Padding="5" 
+        CornerRadius="15">
+        <Border.Background>
+            <LinearGradientBrush>
+                <GradientStop Color="#69dbbd" Offset="0.0"></GradientStop>
+                <GradientStop Color="#a669db" Offset="1"></GradientStop>
+            </LinearGradientBrush>
+        </Border.Background>
+        <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="35" />
                 <RowDefinition Height="auto" />
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-
-            <TextBlock Grid.Row="0" Text="OIB" />
-            <TextBox
-                Grid.Row="1"
-                Margin="0,5,720,0"
-                Width ="80"
-                Text="{Binding OIB, UpdateSourceTrigger=PropertyChanged}" />
-        </Grid>
-
-        <Grid Grid.Row="2" Margin="0 10 0 0">
-            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="30"></ColumnDefinition>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-
             <TextBlock
+                Grid.Row="0"
+                Grid.Column="1"
+                Text="Update client" 
+                FontSize="24"
+                FontWeight="Light"
+                FontFamily="Helvetica"
+                Margin="5">               
+            </TextBlock>
+
+            <Grid 
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="0 25 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Text="OIB" />
+                <TextBox
+                Grid.Row="1"
+                Margin="0,5,720,0"
+                Width ="80"
+                Text="{Binding OIB, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+
+            <Grid 
+                Grid.Row="2"
+                Grid.Column="1"
+                Margin="0 10 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="10"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
                 Grid.Row="0"
                 Grid.Column="0"
                 Text="Ime" />
-            <TextBox
+                <TextBox
                 Grid.Row="1"
                 Grid.Column="0"
                 Margin="0 5 0 0"
                 Text="{Binding Ime, UpdateSourceTrigger=PropertyChanged}" />
 
-            <TextBlock
+                <TextBlock
                 Grid.Row="0"
                 Grid.Column="1"
                 Margin="10,0,0,1"
                 Text="Prezime" Grid.ColumnSpan="2" />
-            <TextBox
+                <TextBox
                 Grid.Row="1"
                 Grid.Column="1"
                 Margin="10 5 0 0"
                 Text="{Binding Prezime, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" />
-        </Grid>
+            </Grid>
 
-        <Grid Grid.Row="3" Margin="0 10 0 0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="160"/>
-                <ColumnDefinition Width="360"/>
-                <ColumnDefinition Width="10"/>
-            </Grid.ColumnDefinitions>
+            <Grid 
+                Grid.Row="3"
+                Grid.Column="1"
+                Margin="0 10 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="360"/>
+                    <ColumnDefinition Width="10"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock
+                <TextBlock
                 Grid.Row="0"
                 Grid.Column="0"
                 Text="Mjesto" />
-            <TextBox
+                <TextBox
                 Grid.Row="1"
                 Grid.Column="0"
                 Margin="0 5 0 0"
                 Text="{Binding Mjesto, UpdateSourceTrigger=PropertyChanged}" />
 
-            <TextBlock
+                <TextBlock
                 Grid.Row="0"
                 Grid.Column="1"
                 Margin="10,0,0,1"
                 Text="Adresa" Grid.ColumnSpan="2" />
-            <TextBox
+                <TextBox
                 Grid.Row="1"
                 Grid.Column="1"
                 Margin="10 5 0 0"
                 Text="{Binding Adresa, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" />
-        </Grid>
-        <Grid Grid.Row="4" Margin="0 10 0 0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="160"/>
-                <ColumnDefinition Width="360"/>
-                <ColumnDefinition Width="10"/>
-            </Grid.ColumnDefinitions>
+            </Grid>
+            <Grid 
+                Grid.Row="4"
+                Grid.Column="1"
+                Margin="0 10 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="360"/>
+                    <ColumnDefinition Width="10"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock
+                <TextBlock
                 Grid.Row="0"
                 Grid.Column="0"
                 Text="Telefon" />
-            <TextBox
+                <TextBox
                 Grid.Row="1"
                 Grid.Column="0"
                 Margin="0 5 0 0"
                 Text="{Binding Telefon, UpdateSourceTrigger=PropertyChanged}" />
 
-            <TextBlock
+                <TextBlock
                 Grid.Row="0"
                 Grid.Column="1"
                 Margin="10,0,0,1"
                 Text="Mail" Grid.ColumnSpan="2" />
-            <TextBox
+                <TextBox
                 Grid.Row="1"
                 Grid.Column="1"
                 Margin="10 5 0 0"
                 Text="{Binding Mail, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" />
-        </Grid>
+            </Grid>
 
 
-        <Grid Grid.Row="5" Margin="0 25 0 0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <Button Name="ButtonAdd" Margin="3" Width ="80" Content="Save" Command="{Binding UpdateClientCmd}"></Button>
+            <Grid Grid.Row="5"
+                  Grid.Column="1"
+                  Margin="0 25 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Name="ButtonAdd" Margin="3" Width ="80" Content="Save" Command="{Binding UpdateClientCmd}"></Button>
+                <Button Grid.Column="1" Name="ButtonCancel" Margin="3" Width ="80" Content="Cancel" Command="{Binding CancelCmd}"></Button>
+            </Grid>
         </Grid>
-    </Grid>
+    </Border>
 </UserControl>
