--- a/Views/ClientsView.xaml
+++ b/Views/ClientsView.xaml
@@ -107,11 +107,11 @@
             <TextBlock 
                 Grid.Row ="3" 
                 Grid.Column="1" 
-                FontSize="24"
+                FontSize="18"
                 FontWeight="Light"
                 FontFamily="Helvetica"
                 Margin="5"
-                Text="{Binding Error}">
+                Text="{Binding ErrorMessage}">
             </TextBlock>
         </Grid>
     </Border>
